--- a/capstone_project.ipynb
+++ b/capstone_project.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hello there... this notebook is mainly used for python Coursera Capston project\n",
-    "## Data analysis using python: visulization and prediction."
+    "# Hello there... this notebook is mainly for python Coursera Capston project\n",
+    "## Data analysis using python: visualization and prediction."
    ]
   },
   {
