Segmenting and Clustering Neighborhoods in Toronto

--- a/segment_ and_cluster_toronto .ipynb
+++ b/segment_ and_cluster_toronto .ipynb
@@ -1482,7 +1482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cleaning the data for data processing"
+    "## Cleaning the data for data processing purpose"
    ]
   },
   {
@@ -2487,7 +2487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merging the tables to get Latitudes and Longitudes"
+    "## Merging the two tables to get Latitudes and Longitudes"
    ]
   },
   {
@@ -2599,7 +2599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get all the rows from the dataframe which contains Toronto in their Borough."
+    "## This is to get all the rows from the dataframe which contains Toronto in their Borough."
    ]
   },
   {
